# elements

./: .coderabbit.yaml  .commitlintrc.cjs  .cursorignore  .gitattributes  .gitignore  .mcp.json  .npmrc  .prettierignore  .releaserc.cjs  .vale.ini  AGENTS.md  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  NOTICE.md  PUBLISHING.md  README.md  commitlint.config.js  context7.json  create-icon-spritesheet.js  custom-elements.json  index.html  knip.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  prettier.config.js  release.config.cjs  release.config.js  rollup-plugin-css-hmr.cjs  stylelint.config.mjs  tsconfig.json  vite.config.ts
projects/elements/: .gitignore  .npmrc  .prettierignore  BUILD.bazel  CHANGELOG.md  DEVELOPMENT.md  PUBLISHING.md  README.md  catalog-info.yaml  coverage.mjs  create-icon-spritesheet.js  custom-elements-manifest.config.mjs  custom-elements.json  eslint.config.js  eslintrc.cjs  index.html  package.json  postcss.config.cjs  postinstall.mjs  release.config.cjs  tsconfig.json  tsconfig.lib.json  vite.bundle.ts  vite.config.ts  vitest.axe.ts  vitest.config.ts  vitest.lighthouse.build.ts  vitest.lighthouse.html  vitest.lighthouse.ts  vitest.ssr.ts  vitest.visual.html  vitest.visual.ts
projects/elements/.lighthouse/: README.md  index.html  index.ts  setup.ts  vitest.config.ts
projects/elements/.storybook/: main.cjs  main.js  manager-head.html  manager.js  manager.tsx  markdown.jsx  playground-url.js  preview-head.html  preview.js  version.js
projects/elements/docs/: accessibility.mdx  accessibility.stories.mdx  angular.mdx  angular.stories.mdx  buildless.mdx  buildless.stories.mdx  changelog.mdx  changelog.stories.mdx  contributions.mdx  contributions.stories.mdx  extentions.mdx  extentions.stories.mdx  getting-started.mdx  getting-started.stories.mdx  glossary.mdx  glossary.stories.mdx  integration.stories.ts  legacy-changelog.mdx  legacy-changelog.stories.mdx  lit.mdx  lit.stories.mdx  maglev.stories.mdx  metrics.stories.mdx  metrics.stories.ts  nextjs.mdx  nextjs.stories.mdx  preact.mdx  preact.stories.mdx  react.mdx  react.stories.mdx  react.stories.tsx  request.stories.mdx  solidjs.mdx  solidjs.stories.mdx  support.mdx  support.stories.mdx  testing.mdx  testing.stories.mdx  theme.mdx  theme.stories.ts  (+8 more)
projects/elements/docs/api-design/: composition.mdx  composition.stories.mdx  custom-events.mdx  custom-events.stories.mdx  getting-started.mdx  getting-started.stories.mdx  packaging.mdx  packaging.stories.mdx  properties-attributes.mdx  properties-attributes.stories.mdx  registration.mdx  registration.stories.mdx  slots.mdx  slots.stories.mdx  stateless.mdx  stateless.stories.mdx  styles.mdx  styles.stories.mdx
projects/elements/docs/patterns/: button-row.mdx  button-row.stories.mdx  card.stories.mdx  feedback.stories.mdx  header-patterns.stories.ts  header.mdx  header.stories.mdx  layout.stories.mdx  pages.stories.mdx  pages.stories.ts  panel-patterns.stories.ts  panel.mdx  panel.stories.mdx  patterns.mdx  patterns.stories.mdx  patterns.stories.ts  row.stories.mdx  sections.stories.mdx  sections.stories.ts  shortcut.mdx  shortcut.stories.mdx  trend.stories.mdx
projects/elements/metrics/: data.json  index.mjs  stories.mjs
projects/elements/snippets/test/: test.snippets.html
projects/elements/src/: bundle.ts  declarations.d.ts  entrypoints.ts  index.css  index.test.lighthouse.ts  index.test.ts  index.ts
projects/elements/src/accordion/: accordion-content.css  accordion-group.css  accordion-header.css  accordion.css  accordion.examples.ts  accordion.mdx  accordion.snippets.html  accordion.stories.mdx  accordion.stories.ts  accordion.test.axe.ts  accordion.test.lighthouse.ts  accordion.test.ssr.ts  accordion.test.ts  accordion.test.visual.ts  accordion.ts  define.ts
projects/elements/src/alert/: alert-banner.css  alert-banner.mdx  alert-banner.stories.mdx  alert-banner.stories.ts  alert-banner.test.axe.ts  alert-banner.text.axe.ts  alert-banner.ts  alert-group.css  alert-group.mdx  alert-group.stories.mdx  alert-group.stories.ts  alert-group.test.axe.ts  alert-group.test.ssr.ts  alert-group.test.ts  alert-group.test.visual.ts  alert-group.ts  alert.css  alert.examples.ts  alert.global.css  alert.mdx  alert.snippets.html  alert.stories.mdx  alert.stories.ts  alert.test.axe.ts  alert.test.lighthouse.ts  alert.test.ssr.ts  alert.test.ts  alert.test.visual.ts  alert.ts  define.ts  index.ts
projects/elements/src/app-header/: app-header.css  app-header.mdx  app-header.stories.mdx  app-header.stories.ts  app-header.test.axe.ts  app-header.test.lighthouse.ts  app-header.test.ssr.ts  app-header.test.ts  app-header.test.visual.ts  app-header.ts  define.ts  index.ts
projects/elements/src/avatar/: avatar-group.css  avatar-group.test.axe.ts  avatar-group.test.ssr.ts  avatar-group.test.ts  avatar-group.test.visual.ts  avatar-group.ts  avatar.css  avatar.examples.ts  avatar.mdx  avatar.stories.ts  avatar.test.axe.ts  avatar.test.lighthouse.ts  avatar.test.ssr.ts  avatar.test.ts  avatar.test.visual.ts  avatar.ts  define.ts
projects/elements/src/badge/: badge.css  badge.examples.ts  badge.mdx  badge.stories.mdx  badge.stories.ts  badge.test.axe.ts  badge.test.lighthouse.ts  badge.test.ssr.ts  badge.test.ts  badge.test.visual.ts  badge.ts  define.ts
projects/elements/src/breadcrumb/: breadcrumb.css  breadcrumb.examples.ts  breadcrumb.mdx  breadcrumb.stories.mdx  breadcrumb.stories.ts  breadcrumb.test.axe.ts  breadcrumb.test.lighthouse.ts  breadcrumb.test.ssr.ts  breadcrumb.test.ts  breadcrumb.test.visual.ts  breadcrumb.ts  define.ts
projects/elements/src/bulk-actions/: bulk-actions.css  bulk-actions.stories.mdx  bulk-actions.stories.ts  bulk-actions.test.axe.ts  bulk-actions.test.ts  bulk-actions.ts  define.ts  index.ts
projects/elements/src/bundles/: bundle.ts
projects/elements/src/button-group/: button-group.css  button-group.examples.ts  (+13 more)
projects/elements/tokens/: style-dictionary.config.cjs  theme.compact.json  theme.dark.json  theme.high-contrast.json  tokens.json
(+4500 files in other folders)
