load("//src/ui/platform/build/vite:index.bzl", "vite_library", "vite_default_srcs", "vite_default_data")
load("//src/ui/platform/build/storybook:index.bzl", "storybook")

vite_library(
    name = "elements",
    package_name = "@elements/elements",
    tsconfig = None,
    srcs = vite_default_srcs() + glob(["css/**/*"]),
    deps = [
        "@npm_platform_libs_elements//lit",
        "@npm_platform_libs_elements//postcss-mixins",
        "@npm_platform_libs_elements//postcss-nested",
        "@npm_platform_libs_elements//rollup-plugin-minify-html-literals",
        "@npm_platform_libs_elements//rollup-plugin-shell",
        "@npm_platform_libs_elements//rollup-plugin-terser",
    ],
    allow_js = True,
    data = [
        "tsconfig.json",
        "tsconfig.lib.json",
        "package.json",
        "package-lock.json",
        "vite.config.ts",
        "postcss.config.cjs",
    ] + glob(["public/**/*"]),
    npm_repository = "@npm_platform_libs_elements",
)

storybook(
    name = "storybook",
    srcs = glob([".storybook/**/*"]) + glob(["src/**/*"]),
    deps = [
        "@npm_platform_libs_elements//@emotion/react",
        "@npm_platform_libs_elements//@storybook/addon-essentials",
        "@npm_platform_libs_elements//@storybook/addon-interactions",
        "@npm_platform_libs_elements//@storybook/addons",
        "@npm_platform_libs_elements//@storybook/api",
        "@npm_platform_libs_elements//@storybook/builder-vite",
        "@npm_platform_libs_elements//@storybook/client-api",
        "@npm_platform_libs_elements//@storybook/components",
        "@npm_platform_libs_elements//@storybook/core-common",
        "@npm_platform_libs_elements//@storybook/core-events",
        "@npm_platform_libs_elements//@storybook/node-logger",
        "@npm_platform_libs_elements//@storybook/store",
        "@npm_platform_libs_elements//@storybook/testing-library",
        "@npm_platform_libs_elements//@storybook/theming",
        "@npm_platform_libs_elements//postcss-mixins",
        "@npm_platform_libs_elements//postcss-nested",
        "@npm_platform_libs_elements//rollup-plugin-css-hmr",
        "@npm_platform_libs_elements//rollup-plugin-minify-html-literals",
        "@npm_platform_libs_elements//rollup-plugin-shell",
        "@npm_platform_libs_elements//rollup-plugin-terser",
        "@npm_platform_libs_elements//storybook-addon-designs",
        "@npm_platform_libs_elements//webpack",
    ],
    data = [
        "package.json",
        "package-lock.json",
        "vite.config.ts",
        "postcss.config.cjs",
        "custom-elements.json"
    ] + glob(["public/**/*"]),
    npm_repository = "@npm_platform_libs_elements",
)