load("//src/ui/platform/build/vite:index.bzl", "vite_library", "vite_default_srcs", "vite_default_data")
load("//src/ui/platform/build/storybook:index.bzl", "storybook")

vite_library(
    name = "elements",
    package_name = "@elements/elements",
    tsconfig = None,
    emptyOutDir = False,
    srcs = vite_default_srcs() + glob(["css/**/*"]),
    deps = [
        "@npm_platform_libs_elements//lit",
        "@npm_platform_libs_elements//postcss-mixins",
        "@npm_platform_libs_elements//postcss-nested",
        "@npm_platform_libs_elements//postcss-each",
        "@npm_platform_libs_elements//postcss-csso",
        "@npm_platform_libs_elements//rollup-plugin-minify-html-literals",
        "@npm_platform_libs_elements//rollup-plugin-terser",
        "@npm_platform_libs_elements//@custom-elements-manifest/analyzer",
        "@npm_platform_libs_elements//style-dictionary",
        "@npm_platform_libs_elements//vite-plugin-dts"
    ],
    allow_js = True,
    data = [
        "tsconfig.json",
        "tsconfig.lib.json",
        "package.json",
        "package-lock.json",
        "vite.config.ts",
        "postcss.config.cjs",
        "tokens/style-dictionary.config.cjs",
        "tokens/theme.compact.json",
        "tokens/theme.dark.json",
        "tokens/theme.high-contrast.json",
        "tokens/tokens.json",
    ] + glob(["public/**/*"]),
    npm_repository = "@npm_platform_libs_elements",
)

storybook(
    name = "storybook",
    srcs = glob([".storybook/**/*"]) + glob(["src/**/*"]) + glob(["tokens/**/*"]) + glob(["public/**/*"]),
    deps = [
        ":elements",
        "@npm_platform_libs_elements//@geometricpanda/storybook-addon-badges",
        "@npm_platform_libs_elements//@elements/custom-elements-storybook",
        "@npm_platform_libs_elements//emoji-picker-element",
        "@npm_platform_libs_elements//construct-style-sheets-polyfill",
        "@npm_platform_libs_elements//element-internals-polyfill",
        "@npm_platform_libs_elements//lit",
    ],
    data = [
        "package.json"
    ],
    npm_repository = "@npm_platform_libs_elements",
)