load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//src/ui/platform/design-system/elements:wireit/package_json.bzl", wireit_bin = "bin")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_binary")

npm_link_all_packages()

wireit_bin.wireit_binary(
    name = "wireit_bin",
    chdir = package_name(),
    patch_node_fs = False,
    include_npm = True,
    data = glob([".storybook/**"]) + glob(["src/**"]) + glob(["public/**"])  + glob(["tokens/**"]) + [
        ":node_modules",
        "eslint.config.js",
        "tsconfig.json",
        "tsconfig.lib.json",
        "package.json",
        "vite.config.ts",
        "vitest.config.ts",
        "postcss.config.cjs",
        "create-icon-spritesheet.js",
        "custom-elements-manifest.config.mjs",
        "metrics/data.json"
    ],
    env = { "CI": "true", "WIREIT_CACHE": "none", "npm_lifecycle_event": "ci" },
)

js_run_binary(
    name = "build",
    patch_node_fs = False,
    tool = ":wireit_bin",
    out_dirs = [
        "dist",
        "coverage"
    ]
)

js_run_binary(
    name = "storybook-build",
    patch_node_fs = False,
    tool = ":wireit_bin",
    out_dirs = [
        "storybook-build"
    ]
)

js_library(
    name = "lib",
    srcs = ["package.json", ":build"],
    tags = ["ui"],
)

npm_package(
    name = "elements",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
    tags = ["ui"],
)
